--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-# This packages are required to install and run our package.
-Scrapy>=1.0
-redis>=2.10
-six>=1.5.2
-redis-py-cluster>=1.3.4
+Scrapy
+redis==2.10.6
+six
+redis-py-cluster==1.3.6
